--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1205,11 +1205,12 @@ section,
 --------------------------------------------------------------*/
 .features .nav-tabs {
   border: 0;
-  background-color: color-mix(in srgb, var(--default-color), transparent 96%);
+  background-color: #cc322510;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50px;
+  border-radius: 15px;
+  border: 1px solid #cc322550;
   padding: 6px;
   width: auto;
 }
@@ -2485,3 +2486,8 @@ section,
 .confetti--animation-fast {
   animation: confetti-fast 1.25s linear 1 forwards;
 }
+
+#hizmetlerimiz .nav-link {
+      margin: 10px 0px !important;
+      border: 1px solid #cc3225 !important;
+    }
